--- a/tp1_tarjeta/css/estiloTarjeta.css
+++ b/tp1_tarjeta/css/estiloTarjeta.css
@@ -12,6 +12,7 @@
     height: 50px;
     width: 50px;
     border-radius: 50%;
+    cursor: pointer;
 
 }
 
@@ -34,10 +35,11 @@
 }
 
 .imagen{
-    width: 200px;
-    height: 200px;
+    width: 195px;
+    height: 195px;
     border-radius: 50%;
     margin-top: 50px;
+    border: solid;
 }
 
 .NombreCompleto{
@@ -71,6 +73,26 @@
     font-size: 18px;
     font-style: italic;
     color: #ffffff;
+    background-color:black;
+
+} 
+
+.boton-volver{
+    top: -230px;
+    left: -270px;
+    background: linear-gradient(to right, black,blue);
+    position: relative;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    text-align: center;
+    font-size: 10px;
+    border: solid;
+}
+.texto-volver{
+    color: #ffffff;
+    font-size: 37px;
 
 }
 
@@ -84,8 +106,16 @@
     font-size: 15px;
     height: 25px;
     cursor: pointer;
-    
-
+}
+.texto-mensaje{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 18px;
+    color: #ffffff;
+}
+a{
+    text-decoration: none;
+     color: inherit;
 }
 
 .boton-info{
